[package]
name = "vocab"
version = "0.1.2"
authors = ["Kaloyan Dimitrov <kaloyankd.06@gmail.com>"]
license = "GNU General Public License v3.0"
edition = "2018"
description = "A lib Rust crate to get definitions, examples and word forms of a given english word. It has two executables: a CLI interface, and an http web server."
readme = "README.md"
homepage = "https://github.com/FreakyCoder/vocab"
repository = "https://github.com/FreakyCoder/vocab"
keywords = ["cli", "search", "dictionary", "word forms", "vocab", "vocabulary"]
categories = ["command-line-utilities"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version="^0.2", features=["macros"] }
reqwest = "^0.10"
select = "^0.6.0-alpha.1"
termcolor = "^1.1"
